docs/api/qiskit/1.3/qiskit.quantum_info.Operator.mdx
---
title: Operator (v1.3)
description: API reference for qiskit.quantum_info.Operator in qiskit v1.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Operator
---

# Operator

<Class id="qiskit.quantum_info.Operator" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L42-L861" signature="qiskit.quantum_info.Operator(data, input_dims=None, output_dims=None)" modifiers="class">
  Bases: `LinearOp`

  Matrix operator class

  This represents a matrix operator $M$ that will [`evolve()`](qiskit.quantum_info.Statevector#evolve "qiskit.quantum_info.Statevector.evolve") a [`Statevector`](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector") $|\psi\rangle$ by matrix-vector multiplication

$$
|\psi\rangle \mapsto M|\psi\rangle,
$$

  and will [`evolve()`](qiskit.quantum_info.DensityMatrix#evolve "qiskit.quantum_info.DensityMatrix.evolve") a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ by left and right multiplication

$$
\rho \mapsto M \rho M^\dagger.
$$

  For example, the following operator $M = X$ applied to the zero state $|\psi\rangle=|0\rangle (\rho = |0\rangle\langle 0|)$ changes it to the one state $|\psi\rangle=|1\rangle (\rho = |1\rangle\langle 1|)$:

  ```python
  >>> import numpy as np
  >>> from qiskit.quantum_info import Operator
  >>> op = Operator(np.array([[0.0, 1.0], [1.0, 0.0]]))  # Represents Pauli X operator

  >>> from qiskit.quantum_info import Statevector
  >>> sv = Statevector(np.array([1.0, 0.0]))
  >>> sv.evolve(op)
  Statevector([0.+0.j, 1.+0.j],
              dims=(2,))

  >>> from qiskit.quantum_info import DensityMatrix
  >>> dm = DensityMatrix(np.array([[1.0, 0.0], [0.0, 0.0]]))
  >>> dm.evolve(op)
  DensityMatrix([[0.+0.j, 0.+0.j],
              [0.+0.j, 1.+0.j]],
              dims=(2,))
  ```

  Initialize an operator object.

  **Parameters**

  *   **data** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *or*[*Operation*](qiskit.circuit.Operation "qiskit.circuit.Operation") *or BaseOperator or matrix*) – data to initialize operator.
  *   **input\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – the output subsystem dimensions. \[Default: None]

  **Raises**

  [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – if input data cannot be initialized as an operator.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. If the input data is a Numpy array of shape (2\*\*N, 2\*\*N) qubit systems will be used. If the input operator is not an N-qubit operator, it will assign a single subsystem with dimension specified by the shape of the input. Note that two operators initialized via this method are only considered equivalent if they match up to their canonical qubit order (or: permutation). See [`Operator.from_circuit()`](#qiskit.quantum_info.Operator.from_circuit "qiskit.quantum_info.Operator.from_circuit") to specify a different qubit permutation.

  ## Attributes

  ### atol

  <Attribute id="qiskit.quantum_info.Operator.atol" attributeValue="1e-08" />

  ### data

  <Attribute id="qiskit.quantum_info.Operator.data">
    The underlying Numpy array.
  </Attribute>

  ### dim

  <Attribute id="qiskit.quantum_info.Operator.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.Operator.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  ### qargs

  <Attribute id="qiskit.quantum_info.Operator.qargs">
    Return the qargs for the operator.
  </Attribute>

  ### rtol

  <Attribute id="qiskit.quantum_info.Operator.rtol" attributeValue="1e-05" />

  ### settings

  <Attribute id="qiskit.quantum_info.Operator.settings">
    Return operator settings.
  </Attribute>

  ## Methods

  ### adjoint

  <Function id="qiskit.quantum_info.Operator.adjoint" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/mixins/adjoint.py#L42-L44" signature="adjoint()">
    Return the adjoint of the Operator.

    **Return type**

    *Self*
  </Function>

  ### apply\_permutation

  <Function id="qiskit.quantum_info.Operator.apply_permutation" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L302-L379" signature="apply_permutation(perm, front=False)">
    Modifies operator’s data by composing it with a permutation.

    **Parameters**

    *   **perm** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – permutation pattern, describing which qubits occupy the positions 0, 1, 2, etc. after applying the permutation.
    *   **front** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – When set to `True` the permutation is applied before the operator, when set to `False` the permutation is applied after the operator.

    **Returns**

    The modified operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – if the size of the permutation pattern does not match the dimensions of the operator.
  </Function>

  ### compose

  <Function id="qiskit.quantum_info.Operator.compose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L494-L542" signature="compose(other, qargs=None, front=False)">
    Return the operator composition with another Operator.

    **Parameters**

    *   **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.
    *   **qargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)") *or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).
    *   **front** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The composed Operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.

    <Admonition title="Note" type="note">
      Composition (`&`) by default is defined as left matrix multiplication for matrix operators, while `@` (equivalent to [`dot()`](#qiskit.quantum_info.Operator.dot "qiskit.quantum_info.Operator.dot")) is defined as right matrix multiplication. That is that `A & B == A.compose(B)` is equivalent to `B @ A == B.dot(A)` when `A` and `B` are of the same type.

      Setting the `front=True` kwarg changes this to right matrix multiplication and is equivalent to the [`dot()`](#qiskit.quantum_info.Operator.dot "qiskit.quantum_info.Operator.dot") method `A.dot(B) == A.compose(B, front=True)`.
    </Admonition>
  </Function>

  ### conjugate

  <Function id="qiskit.quantum_info.Operator.conjugate" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L481-L485" signature="conjugate()">
    Return the conjugate of the Operator.
  </Function>

  ### copy

  <Function id="qiskit.quantum_info.Operator.copy" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/base_operator.py#L143-L145" signature="copy()">
    Make a deep copy of current operator.
  </Function>

  ### dot

  <Function id="qiskit.quantum_info.Operator.dot" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/mixins/group.py#L133-L149" signature="dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an operator object.
    *   **qargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)") *or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).

    **Returns**

    The right matrix multiplied Operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    <Admonition title="Note" type="note">
      The dot product can be obtained using the `@` binary operator. Hence `a.dot(b)` is equivalent to `a @ b`.
    </Admonition>
  </Function>

  ### draw

  <Function id="qiskit.quantum_info.Operator.draw" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L181-L234" signature="draw(output=None, **drawer_args)">
    Return a visualization of the Operator.

    **repr**: String of the state’s `__repr__`.

    **text**: ASCII TextMatrix that can be printed in the console.

    **latex**: An IPython Latex object for displaying in Jupyter Notebooks.

    **latex\_source**: Raw, uncompiled ASCII source to generate array using LaTeX.

    **Parameters**

    *   **output** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Select the output method to use for drawing the state. Valid choices are repr, text, latex, latex\_source, Default is repr.
    *   **drawer\_args** – Arguments to be passed directly to the relevant drawing function or constructor (TextMatrix(), array\_to\_latex()). See the relevant function under qiskit.visualization for that function’s documentation.

    **Returns**

    Drawing of the Operator.

    **Return type**

    [`str`](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") or `TextMatrix` or `IPython.display.Latex`

    **Raises**

    [**ValueError**](https://docs.python.org/3/library/exceptions.html#ValueError "(in Python v3.13)") – when an invalid output method is selected.
  </Function>

  ### equiv

  <Function id="qiskit.quantum_info.Operator.equiv" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L688-L710" signature="equiv(other, rtol=None, atol=None)">
    Return True if operators are equivalent up to global phase.

    **Parameters**

    *   **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an operator object.
    *   **rtol** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) – relative tolerance value for comparison.
    *   **atol** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) – absolute tolerance value for comparison.

    **Returns**

    True if operators are equivalent up to global phase.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### expand

  <Function id="qiskit.quantum_info.Operator.expand" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L624-L627" signature="expand(other)">
    Return the reverse-order tensor product with another Operator.

    **Parameters**

    **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.

    **Returns**

    **the tensor product $b \otimes a$, where $a$**

    is the current Operator, and $b$ is the other Operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  ### from\_circuit

  <Function id="qiskit.quantum_info.Operator.from_circuit" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L381-L460" signature="from_circuit(circuit, ignore_set_layout=False, layout=None, final_layout=None)" modifiers="classmethod">
    Create a new Operator object from a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

    While a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") object can passed directly as `data` to the class constructor this provides no options on how the circuit is used to create an [`Operator`](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator"). This constructor method lets you control how the [`Operator`](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator") is created so it can be adjusted for a particular use case.

    By default this constructor method will permute the qubits based on a configured initial layout (i.e. after it was transpiled). It also provides an option to manually provide a [`Layout`](qiskit.transpiler.Layout "qiskit.transpiler.Layout") object directly.

    **Parameters**

    *   **circuit** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – The [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") to create an Operator object from.
    *   **ignore\_set\_layout** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – When set to `True` if the input `circuit` has a layout set it will be ignored
    *   **layout** ([*Layout*](qiskit.transpiler.Layout "qiskit.transpiler.Layout")) – If specified this kwarg can be used to specify a particular layout to use to permute the qubits in the created [`Operator`](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator"). If this is specified it will be used instead of a layout contained in the `circuit` input. If specified the virtual bits in the [`Layout`](qiskit.transpiler.Layout "qiskit.transpiler.Layout") must be present in the `circuit` input.
    *   **final\_layout** ([*Layout*](qiskit.transpiler.Layout "qiskit.transpiler.Layout")) – If specified this kwarg can be used to represent the output permutation caused by swap insertions during the routing stage of the transpiler.

    **Returns**

    An operator representing the input circuit

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  ### from\_label

  <Function id="qiskit.quantum_info.Operator.from_label" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L245-L300" signature="from_label(label)" modifiers="classmethod">
    Return a tensor product of single-qubit operators.

    **Parameters**

    **label** (*string*) – single-qubit operator string.

    **Returns**

    The N-qubit operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – if the label contains invalid characters, or the length of the label is larger than an explicitly specified num\_qubits.

    **Additional Information:**

    The labels correspond to the single-qubit matrices: ‘I’: \[\[1, 0], \[0, 1]] ‘X’: \[\[0, 1], \[1, 0]] ‘Y’: \[\[0, -1j], \[1j, 0]] ‘Z’: \[\[1, 0], \[0, -1]] ‘H’: \[\[1, 1], \[1, -1]] / sqrt(2) ‘S’: \[\[1, 0], \[0 , 1j]] ‘T’: \[\[1, 0], \[0, (1+1j) / sqrt(2)]] ‘0’: \[\[1, 0], \[0, 0]] ‘1’: \[\[0, 0], \[0, 1]] ‘+’: \[\[0.5, 0.5], \[0.5 , 0.5]] ‘-’: \[\[0.5, -0.5], \[-0.5 , 0.5]] ‘r’: \[\[0.5, -0.5j], \[0.5j , 0.5]] ‘l’: \[\[0.5, 0.5j], \[-0.5j , 0.5]]
  </Function>

  ### input\_dims

  <Function id="qiskit.quantum_info.Operator.input_dims" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/base_operator.py#L135-L137" signature="input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  ### is\_unitary

  <Function id="qiskit.quantum_info.Operator.is_unitary" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L462-L468" signature="is_unitary(atol=None, rtol=None)">
    Return True if operator is a unitary matrix.
  </Function>

  ### output\_dims

  <Function id="qiskit.quantum_info.Operator.output_dims" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/base_operator.py#L139-L141" signature="output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  ### power

  <Function id="qiskit.quantum_info.Operator.power" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L544-L617" signature="power(n, branch_cut_rotation=3.141592653589793e-12, assume_unitary=False)">
    Return the matrix power of the operator.

    Non-integer powers of operators with an eigenvalue whose complex phase is $\pi$ have a branch cut in the complex plane, which makes the calculation of the principal root around this cut subject to precision / differences in BLAS implementation. For example, the square root of Pauli Y can return the $\pi/2$ or $-\pi/2$ Y rotation depending on whether the -1 eigenvalue is found as `complex(-1, tiny)` or `complex(-1, -tiny)`. Such eigenvalues are really common in quantum information, so this function first phase-rotates the input matrix to shift the branch cut to a far less common point. The underlying numerical precision issues around the branch-cut point remain, if an operator has an eigenvalue close to this phase. The magnitude of this rotation can be controlled with the `branch_cut_rotation` parameter.

    The choice of `branch_cut_rotation` affects the principal root that is found. For example, the square root of [`ZGate`](qiskit.circuit.library.ZGate "qiskit.circuit.library.ZGate") will be calculated as either [`SGate`](qiskit.circuit.library.SGate "qiskit.circuit.library.SGate") or [`SdgGate`](qiskit.circuit.library.SdgGate "qiskit.circuit.library.SdgGate") depending on which way the rotation is done:

    ```python
    from qiskit.circuit import library
    from qiskit.quantum_info import Operator

    z_op = Operator(library.ZGate())
    assert z_op.power(0.5, branch_cut_rotation=1e-3) == Operator(library.SGate())
    assert z_op.power(0.5, branch_cut_rotation=-1e-3) == Operator(library.SdgGate())
    ```

    **Parameters**

    *   **n** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) – the power to raise the matrix to.
    *   **branch\_cut\_rotation** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")) – The rotation angle to apply to the branch cut in the complex plane. This shifts the branch cut away from the common point of $-1$, but can cause a different root to be selected as the principal root. The rotation is anticlockwise, following the standard convention for complex phase.
    *   **assume\_unitary** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – if `True`, the operator is assumed to be unitary. In this case, for fractional powers we employ a faster implementation based on Schur’s decomposition.

    **Returns**

    the resulting operator `O ** n`.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    **Raises**

    [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – if the input and output dimensions of the operator are not equal.

    <Admonition title="Note" type="note">
      It is only safe to set the argument `assume_unitary` to `True` when the operator is unitary (or, more generally, normal). Otherwise, the function will return an incorrect output.
    </Admonition>
  </Function>

  ### reshape

  <Function id="qiskit.quantum_info.Operator.reshape" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/base_operator.py#L106-L133" signature="reshape(input_dims=None, output_dims=None, num_qubits=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    **Parameters**

    *   **input\_dims** (*None or* [*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – new subsystem input dimensions. If None the original input dims will be preserved \[Default: None].
    *   **output\_dims** (*None or* [*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")) – new subsystem output dimensions. If None the original output dims will be preserved \[Default: None].
    *   **num\_qubits** (*None or* [*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – reshape to an N-qubit operator \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  ### reverse\_qargs

  <Function id="qiskit.quantum_info.Operator.reverse_qargs" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L712-L732" signature="reverse_qargs()">
    Return an Operator with reversed subsystem ordering.

    For a tensor product operator this is equivalent to reversing the order of tensor product subsystems. For an operator $A = A_{n-1} \otimes ... \otimes A_0$ the returned operator will be $A_0 \otimes ... \otimes A_{n-1}$.

    **Returns**

    the operator with reversed subsystem order.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")
  </Function>

  ### tensor

  <Function id="qiskit.quantum_info.Operator.tensor" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L619-L622" signature="tensor(other)">
    Return the tensor product with another Operator.

    **Parameters**

    **other** ([*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a Operator object.

    **Returns**

    **the tensor product $a \otimes b$, where $a$**

    is the current Operator, and $b$ is the other Operator.

    **Return type**

    [Operator](#qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    <Admonition title="Note" type="note">
      The tensor product can be obtained using the `^` binary operator. Hence `a.tensor(b)` is equivalent to `a ^ b`.
    </Admonition>
  </Function>

  ### to\_instruction

  <Function id="qiskit.quantum_info.Operator.to_instruction" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L474-L479" signature="to_instruction()">
    Convert to a UnitaryGate instruction.
  </Function>

  ### to\_matrix

  <Function id="qiskit.quantum_info.Operator.to_matrix" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L734-L736" signature="to_matrix()">
    Convert operator to NumPy matrix.
  </Function>

  ### to\_operator

  <Function id="qiskit.quantum_info.Operator.to_operator" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L470-L472" signature="to_operator()">
    Convert operator to matrix operator class

    **Return type**

    [*Operator*](#qiskit.quantum_info.Operator "qiskit.quantum_info.operators.operator.Operator")
  </Function>

  ### transpose

  <Function id="qiskit.quantum_info.Operator.transpose" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/quantum_info/operators/operator.py#L487-L492" signature="transpose()">
    Return the transpose of the Operator.
  </Function>
</Class>

